--- a/confidance.html
+++ b/confidance.html
@@ -1,23 +1,15 @@
 ---
 layout: default
-slug: liberation-through-movement-membership
-title: Liberation Through Movement
-description_html: >-
-  <p>​Liberation Through Movement is an online global tribe for women who are
-  ready to:</p><ul><li>Let go of the need to push to find their place and worth
-  in the world.</li><li>Gain the knowledge needed to realign with their feminine
-  way of expansion.</li><li>Learn new embodiment practices and participate in
-  unique life-changing experiences.</li><li>Awaken and celebrate their feminine
-  expressions - finding safety and pleasure in feeling.</li><li>Be supported by
-  women all over the world, held in a container of safety and
-  permission.</li></ul>
+slug: confidance
+title: confiDance
+description: confiDance is a A Mana Movement Program to FREE your authentic expression on and off the dance floor
+description: confiDance is a step-by-step Mana Movement Program where you will be guided into activating the Feminine Pathways through every part of the body in order to bring you into deep connection with your authentic movement, building your unique free flow dance that is sourced from the internal impulses of your body, your inner voice of embodied wisdom, your unique radiant Spirit, and the pleasure of fully inhabiting your authentic expression, both on and off the dance floor!
 featured-image: /uploads/images/manamei-59.jpg
 heading:
-  title: Liberation Through Movement
-  subtitle: Membership Tribe
+  title: 
+  subtitle: 
   description: >-
-    Connecting women around the world in shared experiences of feminine
-    embodiment
+    A Mana Movement Program to FREE your authentic expression on and off the dance floor
   button-enroll:
     text: Join now
     url: https://liberationthroughmovement.mn.co
@@ -25,8 +17,8 @@ heading:
     show: true
     type: youtube
     text: Watch the video
-    url: https://www.youtube.com/embed/fcAVH4VWBTs?si=qKDjMrL-AB_nvbAO
-  background_image: /uploads/images/manamei-91.jpg
+    url: https://www.youtube.com/embed/I4GvhYH_yw0?si=sFo13b13YoCgBMmI
+  background_image: /uploads/images/manamei-98.jpg
   overlay_style: medium
 video:
   video_thumbnail: /uploads/images/manamei-97.png
@@ -57,7 +49,7 @@ inside-the-course:
     background_image: /uploads/backgrounds/manamei-4.jpg
     image_focus: center
 testimonials:
-  background_image: /uploads/images/manamei-92.JPEG
+  background_image: /uploads/images/manamei-93.JPEG
   overlay_style: dark
   testimonials:
     - testimonial: I clearly see and feel the changes in my life and in my body. I see more fluidity in every parts of the every day life, professional, personal…It’s really amazing and magical !!! I feel more present, more grounded, more feminine, more aware, more confident, more a lot of things!!! I also have more creativity.
