--- a/confidance.html
+++ b/confidance.html
@@ -243,7 +243,7 @@ seo:
   <div class="grid md:grid-cols-2">
 
     <!-- Left Column (image) -->
-    <div class="order-last md:order-first m-10p bg-image-style min-h-[60vh] md:min-h-[90vh] mx-10p" style="background-image: url('/uploads/images/manamei-93.JPEG');"></div>
+    <div class="order-last md:order-first m-10p bg-image-style min-h-[60vh] md:min-h-[90vh] mx-10p" style="background-image: url('/uploads/images/manamei-99.png');"></div>
 
     <!-- Right Column (text) -->
     <div class="flex items-center justify-center">
