push for approval

--- a/confidance.html
+++ b/confidance.html
@@ -11,7 +11,7 @@ heading:
   description: >-
     A Mana Movement Program to FREE your authentic expression on and off the dance floor
   button-enroll:
-    text: Join now
+    text: Enroll now
     url: https://liberationthroughmovement.mn.co
   button-video:
     show: true
@@ -27,7 +27,14 @@ video:
 course-description:
   heading: Discover Confidance
   description_html: >-
-    confi<em>Dance</em> is a step-by-step Mana Movement Program where you will be guided into activating the Feminine Pathways through every part of the body in order to bring you into deep connection with your authentic movement, building your unique free flow dance that is sourced from the internal impulses of your body, your inner voice of embodied wisdom, your unique radiant Spirit, and the pleasure of fully inhabiting your authentic expression, both on and off the dance floor!</p><p>Mana Movement is a movement meditation method created by Mana Mei that has already supported thousands of women around the world along their healing and personal transformation journeys. It is a Mind-Body-Spirit Embodiment practice that will support you in cultivating more safety and freedom in your body, and in your capacity to express your true self through the way you move, both in your dance and in your life.
+    confi<em>Dance</em> is a step-by-step Mana Movement Program where you will be guided into activating the Feminine Pathways through every part of the physical and energy body.</p>
+    <p>Cultivate a deep connection with your Body-Mind-Spirit Harmony.</p> 
+    <p>Build your unique FREE FLOW dance that is sourced from the internal impulses of your body.</p>
+    <p>Learn to listen to your inner voice of embodied wisdom.</p>
+    <p>Unleashed your unique radiant Spirit.</p>
+    <p>Feel the pleasure of fully inhabiting your authentic expression- on and off the dance floor!</p>
+    <p>Mana Movement is an embodied movement method created by Mana Mei that has already supported thousands of women around the world along their healing and personal transformation journeys.</p>
+    <p class="mb-0">It is a Mind-Body-Spirit Embodiment practice that will support you in cultivating more safety and freedom in your body, and in your capacity to express your true self through the way you move, both in your dance and in your life.</p>
 who-its-for:
   heading: Who is confiDance is for?
   description_html: >-
@@ -37,7 +44,7 @@ who-its-for:
     image_focus: center
     overlay_style: dark
 inside-the-course:
-  heading: Inside Confidance
+  heading: Inside confiDance
   description_html: >-
     <p>Easy to follow Step-by-Step Process for Embodied Liberation</p>
   module:
@@ -64,10 +71,9 @@ investment:
     list:
       - list-item: Receive lifetime access to all course curriculum!
       - list-item: 4 video-guided Mana Movement Practices
-      - list-item: 2 BONUS Embodied Movement Practices
+      - list-item: 2 BONUS Embodiment Movement Practices
       - list-item: 1 Introduction to Mana Movement PDF
       - list-item: 1 Welcome Video
-      - list-item: PLUS 2 months Free membership to the Liberation Through Movement Workshop Library
   pricing:
     pay-in-full:
       heading: Pay in Full
@@ -218,7 +224,7 @@ seo:
       </div>
       <!-- CTA -->
   <div class="mt-8">
-      <a href="#" class="button">Join Now</a>
+      <a href="#" class="button">Enroll Now</a>
   </div>
   </div>
 </section>
