video responsive and links

--- a/confidance.html
+++ b/confidance.html
@@ -185,7 +185,7 @@ seo:
               {% endfor %}
           </ul>
           <div class="mt-8">
-              <a href="{{page.heading.button-enroll.url}}" class="button">{{page.heading.button-enroll.text}}</a>
+              <a href="{{page.cta.button.url}}" class="button">{{page.cta.button.text}}</a>
           </div>
       </div>
 
@@ -224,7 +224,7 @@ seo:
       </div>
       <!-- CTA -->
   <div class="mt-8">
-      <a href="#" class="button">Enroll Now</a>
+      <a href="{{page.cta.button.url}}" class="button">{{page.cta.button.text}}</a>
   </div>
   </div>
 </section>
