--- a/confidance.html
+++ b/confidance.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: promo
 slug: confidance
 title: confiDance
 description: confiDance is a A Mana Movement Program to FREE your authentic expression on and off the dance floor
@@ -134,7 +134,7 @@ seo:
   <div class="text-center">
     <a href="{{page.cta.button.url}}" class="button">{{page.cta.button.text}}</a>
   </div>
-  
+
 </section>
 
 <!-- Who It's For -->
