--- a/confidance.html
+++ b/confidance.html
@@ -162,7 +162,7 @@ seo:
   <!-- Mobile Image (hidden on desktop) -->
   <div class="bg-image-style min-h-[60vh] mt-10p mx-10p md:hidden" style="background-image: url('/uploads/images/manamei-92.JPEG');"></div>
 
-  <div class="grid lg:grid-cols-3">
+  <div class="grid lg:grid-cols-3 gap-8">
       <!-- Left Column (text) -->
       <div class="lg:col-span-2 p-10p">
           <div>
