--- a/confidance.html
+++ b/confidance.html
@@ -1,5 +1,5 @@
 ---
-layout: default
+layout: no-promo
 slug: confidance
 title: confiDance
 description: confiDance is a A Mana Movement Program to FREE your authentic expression on and off the dance floor
