--- a/offerings-draft.html
+++ b/offerings-draft.html
@@ -9,22 +9,32 @@ map:
       type: Online Program
       description: Begin your Embodiment journey by learning this simple yet powerful practice, designed for all women. This is the perfect place to begin, or deepen your practice of using movement as a daily ritual for awakening and connecting to your Feminine Power and returning to inner balance and clarity.
       url: /mana-movement-foundations.html
-      image_path: /uploads/icons/manamei-14.png
+      button-text: Learn more
+      image_path: /uploads/icons/manamei-12.png
     - title: Mana Movement Full Course
       type: Online Program
       description: Take the next step to deepen your MANA Movement Practice in this 10 module full course which will take you through the detailed breakdown and practice of all elements of the MANA Movement Practice. This expanded course will teach you new exercise and movement not included in the Foundations Course.
       url: /mana-movement.html
-      image_path: /uploads/icons/manamei-15.png
+      button-text: Learn more
+      image_path: /uploads/icons/manamei-13.png
     - title: confiDance
       type: Online Program
       description: Build your unique free flow dance that is sourced from the internal impulses of your body through this step-by-step Mana Movement Program. You will be guided into activating the Feminine Pathways through every part of the physical and energy body.
       url: /confidance.html
-      image_path: /uploads/icons/manamei-16.png
+      button-text: Learn more
+      image_path: /uploads/icons/manamei-14.png
     - title: Mana Movement Maternity
       type: Online Program
       description: Mana Movement Maternity is a holistic prenatal movement program designed to help women connect with their bodies during pregnancy. The course emphasizes trust in the body, emotional awareness, and feminine pathways of movement through non-linear practices. It aims to improve mobility, strength, and mindfulness while fostering a deeper bond with the baby.
       url: /liberation-through-movement-mentorship.html
-      image_path: /uploads/icons/manamei-13.png
+      image_path: /uploads/icons/manamei-15.png
+      button-text: Learn more
+    - title: Mana Movement Online Teacher Training (coming soon)
+      type: Online mentorship
+      description: The Mana Movement Teacher Training is a 4-month Live Online Program for women who wish to be certified as Mana Movement Teachers with the ability to offer Mana Movement classes under the official brand. The minimum pre-requisite to join the MM Teacher Training is to have completed the Mana Movement Full Course PLUS at least 3 months of personal practice.
+      url: 
+      button-text: Join the waitlist
+      image_path: /uploads/icons/manamei-16.png
 additional-offerings: 
   heading: Additional Offerings
   subheading: You are not alone!
@@ -87,7 +97,7 @@ seo:
           <h3 class="heading-md-sans text-feature">{{item.title}}</h3>
           <span class="lowercase text-feature">{{item.type}}</span>
           <p>{{item.description}}</p>
-          <a href="{{item.url}}" class="link">Learn more</a>
+          <a href="{{item.url}}" class="link">{{item.button-text}}</a>
       </div>
 
       {% endfor %}
@@ -99,7 +109,7 @@ seo:
   <p class="text-center">{{page.map.description}}</p>
   <h2 class="heading-lg-sans mt-12">Mana Movement Courses</h2>
   <p>Mana Movement is an Embodied Movement Method that is based on introducing the Feminine Pathways and Energetics of movement into the physical body as a way to balance Mind-Body-Spirit connection. It is an all-in-one Somatic Healing Technique that incorporates Mindfulness Meditation, Physical Activation, and Spiritual Liberation. It is accessible to all bodies, and there is no former experience necessary.</p>
-  
+
   <div class="grid grid-cols-12 mt-12">
       {% for item in page.map.offering %}
       {% capture thecycle %}{% cycle 'left', 'right' %}{% endcapture %}
@@ -111,7 +121,7 @@ seo:
           <h3 class="heading-md-sans text-feature">{{item.title}}</h3>
           <span class="lowercase text-feature">{{item.type}}</span>
           <p>{{item.description}}</p>
-          <a href="{{item.url}}" class="link">Learn more</a>
+          <a href="{{item.url}}" class="link">{{item.button-text}}</a>
       </div>
 
       <div class="col-span-2 px-2 text-center">
@@ -149,7 +159,7 @@ seo:
           <h3 class="heading-md-sans text-feature">{{item.title}}</h3>
           <span class="lowercase text-feature">{{item.type}}</span>
           <p>{{item.description}}</p>
-          <a href="{{item.url}}" class="link">Learn more</a>
+          <a href="{{item.url}}" class="link">{{item.button-text}}</a>
       </div>
       {% endif %}
       {% endfor %}
