--- a/ttc-waitlist.html
+++ b/ttc-waitlist.html
@@ -59,8 +59,7 @@ seo:
                             class="button rounded-none py-0 cursor-pointer w-full" value="Submit">
                     </div>
 
-                    <!-- Mana decided that people who opt-in to join the waitlist will receive the brochure and therefore the tag value is for "mentorship-brochure" instead of "mentorship-waitlist" -->
-                    <div hidden=""><input type="hidden" name="tags" value="11197992,11202896"></div>
+                    <div hidden=""><input type="hidden" name="tags" value="24288238"></div>
                     <div id="mce-responses" class="clear">
                         <div class="response" id="mce-error-response" style="display: none;"></div>
                         <div class="response" id="mce-success-response" style="display: none;"></div>
