--- a/ttc-waitlist.html
+++ b/ttc-waitlist.html
@@ -36,20 +36,20 @@ seo:
 
                     <!-- First Name -->
                     <div class="mc-field-group md:col-span-2">
-                        <input type="text" name="FNAME" class="required text bg-transparent border border-white w-full"
+                        <input type="text" name="FNAME" class="required text bg-transparent border border-white w-full px-2"
                             placeholder=" First Name" id="mce-FNAME" required="" value="">
                     </div>
 
                     <!-- Last Name -->
                     <div class="mc-field-group md:col-span-2">
-                        <input type="text" name="LNAME" class="required text bg-transparent border border-white w-full"
+                        <input type="text" name="LNAME" class="required text bg-transparent border border-white w-full px-2"
                             placeholder=" Last Name" id="mce-LNAME" required="" value="">
                     </div>
 
                     <!-- Email -->
                     <div class="mc-field-group md:col-span-2">
                         <input type="email" name="EMAIL"
-                            class="required email bg-transparent border border-white w-full" placeholder=" Email"
+                            class="required email bg-transparent border border-white w-full px-2" placeholder=" Email"
                             id="mce-EMAIL" required="" value="">
                     </div>
 
