Switched offerings page over

--- a/ttc-waitlist.html
+++ b/ttc-waitlist.html
@@ -13,7 +13,7 @@ seo:
   description: Sign up for the waitlist to be the first to know about the opening of Mana Movement Teacher Training applications. Discover a unique blend of dance and movement practices designed for deep personal growth, self-expression, and inner balance.
   keywords: teacher training waitlist, Mana Mei, personal growth, self-expression, somatic movement, expressive dance, self-love, sensuality, authenticity, embodied movement
   social_image: /uploads/images/manamei-27.jpg
-  hide-from-google: true
+  hide-from-google: false
 ---
 
 <!-- Opt-In -->
