--- a/offerings.html
+++ b/offerings.html
@@ -2,42 +2,56 @@
 layout: promo
 title: Offerings
 map: 
-  heading: A lifechanging journey
-  description: The following is an outline of the path you will be guided through if you feel called to choose Mana Mei and Liberation Through Movement as your guiding light for this next thread in the weaving of your life journey. If you take this journey, IT WILL CHANGE YOUR LIFE.
+  heading: A place where there is something for everyone...
+  description: Whether you are brand new in your journey of Embodied Liberation, or if you have been dancing this path for years already, you will find an offering here to support you in your journey back home to your True Self and Liberated Expression.
   offering:
     - title: Mana Movement Foundations
       type: Online Program
       description: Begin your Embodiment journey by learning this simple yet powerful practice, designed for all women. This is the perfect place to begin, or deepen your practice of using movement as a daily ritual for awakening and connecting to your Feminine Power and returning to inner balance and clarity.
       url: /mana-movement-foundations.html
-      image_path: /uploads/icons/manamei-14.png
+      button-text: Learn more
+      image_path: /uploads/icons/manamei-12.png
     - title: Mana Movement Full Course
       type: Online Program
       description: Take the next step to deepen your MANA Movement Practice in this 10 module full course which will take you through the detailed breakdown and practice of all elements of the MANA Movement Practice. This expanded course will teach you new exercise and movement not included in the Foundations Course.
       url: /mana-movement.html
-      image_path: /uploads/icons/manamei-15.png
-    - title: Wisdom Body
-      type: Online Program
-      description: Through intentionally designed Movement Meditations, Somatic Dance Exercises, and Embodied Dance Journeys, you will touch deeper layers of your self-connection, expand your movement vocabulary, and explore vast realms of your authentic self expression.
-      url: /wisdom-body.html
-      image_path: /uploads/icons/manamei-16.png
-    - title: Liberation Through Movement Mentorship
-      type: Online Program
-      description: Mana Mei’s Keystone Offering! A 4-month deep dive into every facet of your personal embodiment, all Liberation Through Movement Practices, plus Level 1 Facilitation Training, birthing through the other side of this intimate and powerful container as an empowered woman and Embodied Feminine Leader.
-      url: /liberation-through-movement-mentorship.html
+      button-text: Learn more
       image_path: /uploads/icons/manamei-13.png
+    - title: confiDance
+      type: Online Program
+      description: Build your unique free flow dance that is sourced from the internal impulses of your body through this step-by-step Mana Movement Program. You will be guided into activating the Feminine Pathways through every part of the physical and energy body.
+      url: /confidance.html
+      button-text: Learn more
+      image_path: /uploads/icons/manamei-14.png
+    - title: Mana Movement Maternity
+      type: Online Program
+      description: This course offers a powerful opportunity for pregnant women to reconnect with their bodies, intuition, and feminine energy in a nurturing and intentional way. Through mindful practices, it helps set the foundation for a transformative and empowering experience, where participants feel fully in their power, deeply attuned to their intuition, and open to receiving the joys of pregnancy and birth.
+      url: /liberation-through-movement-mentorship.html
+      image_path: /uploads/icons/manamei-15.png
+      button-text: Learn more
+    - title: Mana Movement Online Teacher Training (coming soon)
+      type: Online Training
+      description: The Mana Movement Teacher Training is a 4-month Live Online Program for women who wish to be certified as Mana Movement Teachers with the ability to offer Mana Movement classes under the official brand. The minimum pre-requisite to join the MM Teacher Training is to have completed the Mana Movement Full Course PLUS at least 3 months of personal practice.
+      url: 
+      button-text: Join the waitlist
+      image_path: /uploads/icons/manamei-16.png
 additional-offerings: 
-  heading: Additional Offerings
+  heading: Liberation Through Movement Offerings
   subheading: You are not alone!
-  description: Become a shining pillar of light in the Liberation Through Movement Community and connect with women around the world also on the Path of Embodied Healing.
+  description: Liberation Through Movement is a modality of healing movement and intentional dance practices that are designed to support you on your personal healing and personal transformation journey. The Somatic Healing tools offered in LTM will support your return to wholeness, personal empowerment, and stepping into authentic expression.</p><p>The practices in LTM are based on Embodied Movement and Somatic Dance.  
   offering: 
-   - title: Liberation Through Movement
-     type: Membership Community
-     description: Connect with like-minded embodied women all over the world in shared experience through monthly live online embodiment workshops and masterclasses. Receive unlimited access to the full Workshop Library of all past events. Feel seen and supported in your journey back home to yourself.
-     url: /liberation-through-movement.html
-   - title: Mana Movement Maternity
+   - title: Wisdom Body
      type: Online Program
-     description: This course offers a powerful opportunity for pregnant women to reconnect with their bodies, intuition, and feminine energy in a nurturing and intentional way. Through mindful practices, it helps set the foundation for a transformative and empowering experience, where participants feel fully in their power, deeply attuned to their intuition, and open to receiving the joys of pregnancy and birth.
-     url: /mana-movement-maternity.html
+     description: Through intentionally designed Movement Meditations, Somatic Dance Exercises, and Embodied Dance Journeys, you will touch deeper layers of your self-connection, expand your movement vocabulary, and explore vast realms of your authentic self expression.
+     url: /wisdom-body.html
+   - title: LTM Workshop Library Membership
+     type: Workshop Library
+     description: Receive unlimited access to the full Workshop Library of all past LTM events. Feel seen and supported in your journey back home to yourself.
+     url: /liberation-through-movement.html
+   - title: Liberation Through Movement Mentorship
+     type: Online Program
+     description: Mana Mei’s Keystone Offering! A 4-month deep dive into every facet of your personal embodiment, all Liberation Through Movement Practices, plus Level 1 Facilitation Training, birthing through the other side of this intimate and powerful container as an empowered woman and Embodied Feminine Leader.
+     url: /liberation-through-movement-mentorship.html
 cta: 
   type: masterclass-reply
   heading_html: Liberation Through Movement<br>
@@ -59,10 +73,125 @@ seo:
 {% include hero-banner-offerings.html %}
 
 <!-- Map -->
-{% include map.html %}
+<!-- Small Devices & Smaller -->
+<section class="md:hidden pt-10p px-5p">
+  <p class="text-md-serif text-feature text-center">{{page.map.heading}}</p>
+  <p class="text-center">{{page.map.description}}</p>
+
+  <h2 class="heading-md-sans mt-12">Mana Movement Courses</h2>
+  <p>Mana Movement is an Embodied Movement Method that is based on introducing the Feminine Pathways and Energetics of movement into the physical body as a way to balance Mind-Body-Spirit connection. It is an all-in-one Somatic Healing Technique that incorporates Mindfulness Meditation, Physical Activation, and Spiritual Liberation. It is accessible to all bodies, and there is no former experience necessary.</p>
+  <p class="italic">Programs do not have to be completed in order. You are free to choose whichever one calls to you!</p>
+
+  <div class="grid grid-cols-5 mt-12">
+      {% for item in page.map.offering %}
+
+      <!-- icon -->
+      <div class="col-span-1 px-2 text-center">
+          <img src="{{item.image_path}}" class="h-16 sm:h-20 md:h-24 bg-black z-20 inline-block">
+          {% if forloop.last %}
+          <!-- Omit the div structure for the last item -->
+          {% else %}
+          <div class="grid grid-cols-2 h-full">
+              <div class="border-r-[0.5px] border-feature h-full"></div>
+              <div></div>
+          </div>
+          {% endif %}
+      </div>
+
+      <div class="col-span-4 mb-12 ml-2">
+          <h3 class="heading-md-sans text-feature">{{item.title}}</h3>
+          <span class="lowercase text-feature">{{item.type}}</span>
+          <p>{{item.description}}</p>
+          <a href="{{item.url}}" class="link">{{item.button-text}}</a>
+      </div>
+
+      {% endfor %}
+</section>
+
+<!-- Medium Devices & Larger -->
+<section class="hidden md:block md:px-5p lg:px-10p pt-10p">
+  <div class="text-center">
+    <p class="text-md-serif text-feature">{{page.map.heading}}</p>
+    <p>{{page.map.description}}</p>
+    <h2 class="heading-md-sans mt-12">Mana Movement Courses</h2>
+    <p>Mana Movement is an Embodied Movement Method that is based on introducing the Feminine Pathways and Energetics of movement into the physical body as a way to balance Mind-Body-Spirit connection. It is an all-in-one Somatic Healing Technique that incorporates Mindfulness Meditation, Physical Activation, and Spiritual Liberation. It is accessible to all bodies, and there is no former experience necessary.</p>
+    <p class="italic">Programs do not have to be completed in order. You are free to choose whichever one calls to you!</p>
+  </div>
+
+  <div class="grid grid-cols-12 mt-16">
+      {% for item in page.map.offering %}
+      {% capture thecycle %}{% cycle 'left', 'right' %}{% endcapture %}
+      {% if thecycle == 'left' %}
+
+      <!-- Content Left -->
+      <div class="col-span-5 mb-12 
+      {% cycle 'text-right', 'text-left' %}">
+          <h3 class="heading-md-sans text-feature">{{item.title}}</h3>
+          <span class="lowercase text-feature">{{item.type}}</span>
+          <p>{{item.description}}</p>
+          <a href="{{item.url}}" class="link">{{item.button-text}}</a>
+      </div>
+
+      <div class="col-span-2 px-2 text-center">
+          <img src="{{item.image_path}}" class="h-28 bg-black z-20 inline-block">
+          {% if forloop.last %}
+          <!-- Omit the div structure for the last item -->
+          {% else %}
+          <div class="grid grid-cols-2 h-full">
+              <div class="border-r border-feature h-full"></div>
+              <div></div>
+          </div>
+          {% endif %}
+      </div>
+
+      <div class="col-span-5"></div>
+      {% else %}
+
+      <!-- Content Right -->
+      <div class="col-span-5"></div>
+
+      <div class="col-span-2 px-2 text-center">
+          <img src="{{item.image_path}}" class="h-28 bg-black z-20 inline-block">
+          {% if forloop.last %}
+          <!-- Omit the div structure for the last item -->
+          {% else %}
+          <div class="grid grid-cols-2 h-full">
+              <div class="border-r border-feature h-full"></div>
+              <div></div>
+          </div>
+          {% endif %}
+      </div>
+
+      <div class="col-span-5 p-5p mb-12
+      {% cycle 'text-right', 'text-left' %}">
+          <h3 class="heading-md-sans text-feature">{{item.title}}</h3>
+          <span class="lowercase text-feature">{{item.type}}</span>
+          <p>{{item.description}}</p>
+          <a href="{{item.url}}" class="link">{{item.button-text}}</a>
+      </div>
+      {% endif %}
+      {% endfor %}
+  </div>
+</section>
 
 <!-- Additional Offerings -->
-{% include additional-offerings.html %}
+<section class="py-16 md:py-10p px-5p md:px-10p border-t border-feature md:border-none">
+  <div class="text-center">
+      <h2 class="heading-md-sans">{{page.additional-offerings.heading}}</h2>
+      <!-- <span class="text-md-serif text-feature block">{{page.additional-offerings.subheading}}</span> -->
+      <p>{{page.additional-offerings.description}}</p>
+  </div>
+  <div>
+      {% for item in page.additional-offerings.offering %}
+      <div class="mt-12">
+          <h3 class="heading-md-sans text-feature">{{item.title}}</h3>
+          <span class="lowercase text-feature">{{item.type}}</span>
+          <p>{{item.description}}</p>
+          <a href="{{item.url}}" class="link">Learn more</a>
+      </div>
+      {% endfor %}
+  </div>
+</section>
 
 <!-- Masterclass Reply -->
 {% include optin.html %}
