waitlist button for ttc

--- a/offerings.html
+++ b/offerings.html
@@ -32,7 +32,7 @@ map:
     - title: Mana Movement Online Teacher Training (coming soon)
       type: Online Training
       description: The Mana Movement Teacher Training is a 4-month Live Online Program for women who wish to be certified as Mana Movement Teachers with the ability to offer Mana Movement classes under the official brand. The minimum pre-requisite to join the MM Teacher Training is to have completed the Mana Movement Full Course PLUS at least 3 months of personal practice.
-      url: 
+      url: /ttc-waitlist.html
       button-text: Join the waitlist
       image_path: /uploads/icons/manamei-16.png
 additional-offerings: 
