--- a/ttc-apply.html
+++ b/ttc-apply.html
@@ -1,7 +1,6 @@
 ---
 layout: promo
 cta: 
-  type: waitlist
   heading_html: Apply to join the Mana Movement Online Teacher Training
   subtitle: Fill out the form below to receive your application via email.
   background:
@@ -9,8 +8,8 @@ cta:
     background_position: 50% 65%
     overlay_style: medium
 seo: 
-  title: Apply to join the Liberation Through Movement Mentorship
-  description: Application to join Mana Mei's mentorship.
+  title: Apply to join the Mana Movement Online Teacher Training
+  description: Are you ready to become a certified Mana Movement Facilitator?
   social_image: https://manamei.embodiedcreativeagency.com/path-to-waitlist-image.jpg
   hide-from-google: true
 ---
