thankyou redirect page

--- a/ttc-application.html
+++ b/ttc-application.html
@@ -9,7 +9,7 @@ seo:
     <h1 class="text-lg-serif text-feature mb-12">Liberation Through Movement Mentorship Application</h1>
 
     <form id="mentorship-application" name="mentorship-application" method="post" data-netlify="true"
-        action="/application-thank-you.html" onSubmit="submit" data-netlify-honeypot="bot-field">
+        action="/application-ttc-thank-you.html" onSubmit="submit" data-netlify-honeypot="bot-field">
 
         <input type="hidden" name="form-name" value="mentorship-application">
         <p class="hidden">
