mailchimp embed form

--- a/ttc-apply.html
+++ b/ttc-apply.html
@@ -12,7 +12,7 @@ cta:
 seo: 
   title: Apply to join the Mana Movement Online Teacher Training
   description: Are you ready to become a certified Mana Movement Facilitator?
-  social_image: https://manamei.embodiedcreativeagency.com/path-to-waitlist-image.jpg
+  social_image: /uploads/images/manamei-101.JPG
   hide-from-google: true
 ---
 
